--- a/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.html
+++ b/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.html
@@ -2,11 +2,11 @@
 <article fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="24px">
   <div class="surface" fxLayoutalign="center center">
     <img asset="add_title.svg" alt="Add title">
-    <a routerLink="lobby" mat-button color="primary" test-id="add-title">Add one Title</a>
+    <a routerLink="/c/o/dashboard/title/lobby" mat-button color="primary" test-id="add-title">Add one Title</a>
   </div>
   <div class="surface">
     <img asset="add_files.svg" alt="Upload files">
-    <a routerLink="../import" mat-button color="primary">Import Titles in bulk</a>
+    <a routerLink="/c/o/dashboard/import" mat-button color="primary">Import Titles in bulk</a>
   </div>
 </article>
 <h3>Or</h3>
