--- a/libs/event/src/lib/components/request-screening/request-screening.component.html
+++ b/libs/event/src/lib/components/request-screening/request-screening.component.html
@@ -1,22 +1,24 @@
-<ng-container *ngIf="requestStatus | async as status">
-  <span [matTooltip]="screeningRequest[status]">
-    <ng-container *ngIf="iconOnly else button">
-      <button mat-icon-button class="translucent" [disabled]="status !== 'available'" (click)="requestScreening()">
-        <ng-container *ngTemplateOutlet="icon"></ng-container>
-      </button>
-    </ng-container>
-    <ng-template #button>
-      <button mat-button class="translucent" [disabled]="status !== 'available'" (click)="requestScreening()">
-        <ng-container *ngTemplateOutlet="icon"></ng-container>
-        {{ screeningRequest[status] }}
-      </button>
+<ng-container *ngIf="canAskForScreening">
+  <ng-container *ngIf="requestStatus | async as status">
+    <span [matTooltip]="screeningRequest[status]">
+      <ng-container *ngIf="iconOnly else button">
+        <button mat-icon-button class="translucent" [disabled]="status !== 'available'" (click)="requestScreening()">
+          <ng-container *ngTemplateOutlet="icon"></ng-container>
+        </button>
+      </ng-container>
+      <ng-template #button>
+        <button mat-button class="translucent" [disabled]="status !== 'available'" (click)="requestScreening()">
+          <ng-container *ngTemplateOutlet="icon"></ng-container>
+          {{ screeningRequest[status] }}
+        </button>
+      </ng-template>
+    </span>
+  
+    <ng-template #icon>
+      <mat-spinner *ngIf="status === 'sending'; else available" diameter="24"></mat-spinner>
+      <ng-template #available>
+        <mat-icon svgIcon="ask_screening_2"></mat-icon>
+      </ng-template>
     </ng-template>
-  </span>
-
-  <ng-template #icon>
-    <mat-spinner *ngIf="status === 'sending'; else available" diameter="24"></mat-spinner>
-    <ng-template #available>
-      <mat-icon svgIcon="ask_screening_2"></mat-icon>
-    </ng-template>
-  </ng-template>
+  </ng-container>
 </ng-container>
