--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.scss
@@ -24,3 +24,9 @@ article {
 fieldset {
   border: none;
 }
+
+.orgs {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 16px;
+}
