--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -173,6 +173,12 @@
   <ng-template colRef="title.title.international" label="Title" let-title let-analytic="item" sort>
     <a [routerLink]="['/c/o/dashboard/crm/movie', analytic.title.id]">{{ title }}</a>
   </ng-template>
+  <ng-template colRef="title.app.catalog.access" label="AC Access" let-catalogAccess sort>
+    {{ catalogAccess ? 'Yes' : 'No' }}
+  </ng-template>
+  <ng-template colRef="title.app.festival.access" label="AM Access" let-festivalAccess sort>
+    {{ festivalAccess ? 'Yes' : 'No' }}
+  </ng-template>
   <ng-template colRef="pageView" label="Page views" let-pageView sort>
     {{ pageView ? pageView : '-' }}
   </ng-template>
