--- a/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
@@ -21,7 +21,7 @@
         </ng-template>
       </button>
     </article>
-    <bf-table [source]="movies" clickable useFilter pagination="50" (rowClick)="goToEdit($event)">
+    <bf-table [source]="movies" useFilter pagination="50">
       <ng-template colRef="poster" let-poster>
         <img class="poster" [ref]="poster" asset="empty_poster.svg">
       </ng-template>
@@ -29,9 +29,6 @@
         <span>{{ id }}</span>
         <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
           <mat-icon svgIcon="file_copy"></mat-icon>
-        </button>
-        <button mat-icon-button (click)="goToEditNewTab(id, $event)">
-          <mat-icon svgIcon="launch"></mat-icon>
         </button>
       </ng-template>
       <ng-template colRef="title.international" label="International title" sort let-title>
@@ -75,6 +72,11 @@
       </ng-template>
       <ng-template colRef="releaseMedias" label="Release Medias" [sort]="sorts.byLength" let-releaseMedias>
         <span [matTooltip]="releaseMedias | join"> {{ releaseMedias | join | maxLength: 30 }} </span>
+      </ng-template>
+      <ng-template colRef="id" label="Action" let-movieId sticky>
+        <a target="_blank" [routerLink]="['/c/o/dashboard/crm/movie', movieId]">
+          <mat-icon svgIcon="launch"></mat-icon>
+        </a>
       </ng-template>
     </bf-table>
   </ng-container>
