--- a/apps/crm/crm/src/app/crm/pages/events/events.component.html
+++ b/apps/crm/crm/src/app/crm/pages/events/events.component.html
@@ -7,9 +7,12 @@
     </button>
   </article>
 
-  <bf-table [source]="rows" pagination="50" useFilter>
+  <bf-table [source]="rows" clickable pagination="50" useFilter (rowClick)="goToEdit($event)">
     <ng-template colRef="id" label="Id" let-id sort>
-      {{id}}
+      <span>{{ id }}</span>
+      <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
+        <mat-icon svgIcon="file_copy"></mat-icon>
+      </button>
     </ng-template>
     <ng-template colRef="title" label="Title" let-title sort>
       {{title}}
@@ -45,12 +48,9 @@
       {{isSecret}}
     </ng-template>
     <ng-template colRef="id" label="Action" let-eventId sticky>
-      <a mat-icon-button [routerLink]="['/c/o/dashboard/crm/event', eventId]">
-        <mat-icon svgIcon="visibility"></mat-icon>
+      <a target="_blank" [routerLink]="['/c/o/dashboard/crm/event', eventId]" (click)="$event.stopPropagation()">
+        <mat-icon svgIcon="launch"></mat-icon>
       </a>
-      <button mat-icon-button [cdkCopyToClipboard]="eventId" (click)="$event.stopPropagation()">
-        <mat-icon svgIcon="file_copy"></mat-icon>
-      </button>
     </ng-template>
   </bf-table>
 
