--- a/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
@@ -84,6 +84,11 @@
             </li>
           </ul>
         </ng-template>
+        <ng-template colRef="id" label="Action" let-movieId sticky>
+          <a target="_blank" [routerLink]="['/c/o/dashboard/crm/movie', movieId]" (click)="$event.stopPropagation()">
+            <mat-icon svgIcon="launch"></mat-icon>
+          </a>
+        </ng-template>
       </bf-table>
     </mat-card>
 
