--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -115,6 +115,9 @@
             <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters.orgActivity">
               {{ activity | toLabel:'orgActivity' }}
             </ng-template>
+            <ng-template colRef="orgPageViews" label="# Line-up Page Views" let-orgPageViews sort>
+              {{ orgPageViews }}
+            </ng-template>
             <ng-template colRef="pageView" label="# Title Page Views" let-pageView sort>
               {{ pageView }}
             </ng-template>
