--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -24,7 +24,7 @@
 </header>
 
 <section>
-  <analytics-metric-card-list [cards]="aggregatedCards$ | async" selectable (selection)="filter$.next($event)">
+  <analytics-metric-card-list [cards]="aggregatedCards$ | async">
   </analytics-metric-card-list>
 
   <article>
