--- a/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movies/movies.component.html
@@ -30,9 +30,6 @@
         <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
           <mat-icon svgIcon="file_copy"></mat-icon>
         </button>
-        <button mat-icon-button (click)="goToEditNewTab(id, $event)">
-          <mat-icon svgIcon="launch"></mat-icon>
-        </button>
       </ng-template>
       <ng-template colRef="title.international" label="International title" sort let-title>
         {{ title }}
@@ -75,6 +72,11 @@
       </ng-template>
       <ng-template colRef="releaseMedias" label="Release Medias" [sort]="sorts.byLength" let-releaseMedias>
         <span [matTooltip]="releaseMedias | join"> {{ releaseMedias | join | maxLength: 30 }} </span>
+      </ng-template>
+      <ng-template colRef="id" label="Action" let-movieId sticky>
+        <a target="_blank" [routerLink]="['/c/o/dashboard/crm/movie', movieId]" (click)="$event.stopPropagation()">
+          <mat-icon svgIcon="launch"></mat-icon>
+        </a>
       </ng-template>
     </bf-table>
   </ng-container>
