deal-display-offer test

--- a/apps/catalog/catalog/src/app/dashboard/dashboard.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         <mat-icon matListIcon svgIcon="calendar_today"></mat-icon>
         <span matLine><b>My Avails</b></span>
       </a>
-      <a mat-list-item routerLink="sales" routerLinkActive="active">
+      <a mat-list-item routerLink="sales" routerLinkActive="active" test-id="sales">
         <mat-icon matListIcon svgIcon="document"></mat-icon>
         <span matLine><b>My Deals</b></span>
       </a>
