--- a/libs/contract/src/lib/contract/components/item/contract-item.component.html
+++ b/libs/contract/src/lib/contract/components/item/contract-item.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="contract?.titleId | getTitle | async as title">
-  <header fxLayout fxLayoutAlign="space-between start" test-id="avails-section">
+  <header fxLayout fxLayoutAlign="space-between start">
     <section fxLayout="column">
       <h2>{{ title?.title?.international }}</h2>
       <article fxLayout fxLayoutGap="12px">
