--- a/apps/catalog/catalog/src/app/marketplace/offer/shell/shell.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/offer/shell/shell.component.html
@@ -3,14 +3,14 @@
     <bf-tag>{{ offer.status | toLabel:'offerStatus' }}</bf-tag>
     <article>
       <div>
-        <h1>{{ offer.id }}</h1>
-        <span>Offer created: {{ offer._meta.createdAt | date: 'MM/dd/yyyy' }}</span>
+        <h1 test-id="offer-id">{{ offer.id }}</h1>
+        <span test-id="offer-creation">Offer created: {{ offer._meta.createdAt | date: 'MM/dd/yyyy' }}</span>
       </div>
       <div *ngIf="offer.contracts as contracts">
-        <h2>
+        <h2 test-id="offer-length">
           {{ contracts.length}} {{contracts.length>1 ? 'Titles':'Title'}}
         </h2>
-        <h2 *ngIf="contracts | total:'negotiation.price' as price; else noPrice">
+        <h2 *ngIf="contracts | total:'negotiation.price' as price; else noPrice" test-id="offer-price">
           Total: {{ price | currency:offer.currency }}
         </h2>
         <ng-template #noPrice>
@@ -32,7 +32,7 @@
 
   <section class="surface" *ngIf="offer.specificity">
     <h2>Specific Terms</h2>
-    <p>{{ offer.specificity }}</p>
+    <p test-id="offer-specificity">{{ offer.specificity }}</p>
   </section>
 
   <router-outlet></router-outlet>
