--- a/apps/catalog/catalog/src/app/marketplace/offer/shell/contract-view/contract-view.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/offer/shell/contract-view/contract-view.component.html
@@ -1,4 +1,4 @@
-<a mat-button routerLink="..">
+<a mat-button routerLink=".." test-id="back">
   <mat-icon svgIcon="arrow_back"></mat-icon>
   <span>Come back to Contract List</span>
 </a>
