--- a/apps/crm/crm/src/app/crm/pages/users/users.component.html
+++ b/apps/crm/crm/src/app/crm/pages/users/users.component.html
@@ -27,7 +27,7 @@
           Title Analytics
           <mat-icon svgIcon="arrow_upward"></mat-icon>
         </button>
-        <button mat-menu-item (click)="exportOrgAnalyticsPageViews(users)">
+        <button mat-menu-item (click)="exportOrgAnalyticsPageViews()">
           Org Analytics
           <mat-icon svgIcon="arrow_upward"></mat-icon>
         </button>
