--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -115,8 +115,8 @@
             <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters.orgActivity">
               {{ activity | toLabel:'orgActivity' }}
             </ng-template>
-            <ng-template colRef="orgPageViews" label="# Line-up Page Views" let-orgPageViews sort>
-              {{ orgPageViews }}
+            <ng-template colRef="orgPageView" label="# Line-up Page Views" let-orgPageView sort>
+              {{ orgPageView }}
             </ng-template>
             <ng-template colRef="pageView" label="# Title Page Views" let-pageView sort>
               {{ pageView }}
