--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -36,8 +36,8 @@
   <ng-template colRef="org.activity" label="Activity" let-activity sort>
     {{ activity | toLabel:'orgActivity' }}
   </ng-template>
-  <ng-template colRef="orgPageViews" label="# Line-up Page Views" let-orgPageViews sort>
-    {{ orgPageViews }}
+  <ng-template colRef="orgPageView" label="# Line-up Page Views" let-orgPageView sort>
+    {{ orgPageView }}
   </ng-template>
   <ng-template colRef="pageView" label="# Title Page Views" let-pageView sort>
     {{ pageView }}
