--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -31,6 +31,7 @@
     <header>
       <h3>
         <span>Buyer was interested in these Titles</span>
+        <!-- TODO #9158 remove? -->
         <mat-icon svgIcon="info" matTooltip="This data only includes Buyers and excludes all Sellers from Archipel Market."></mat-icon>
       </h3>
       <button mat-button color="primary" (click)="exportAnalytics()">
