deal negotiation test

--- a/apps/catalog/catalog/src/app/dashboard/sales/shell/negotiation/negotiation.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/sales/shell/negotiation/negotiation.component.html
@@ -6,11 +6,11 @@
 <negotiation-form [form]="form" [activeTerm]="activeTerm" [currency]="negotiation?.currency"></negotiation-form>
 
 <footer fxLayout fxLayoutAlign="space-between center">
-  <button mat-stroked-button color="primary" (click)="decline()">
+  <button mat-stroked-button color="primary" (click)="decline()" test-id="decline">
     <mat-icon svgIcon="refuse"></mat-icon>
     <span>Decline</span>
   </button>
-  <button mat-flat-button color="primary" (click)="submit()" [disabled]="form.invalid">
+  <button mat-flat-button color="primary" (click)="submit()" [disabled]="form.invalid" test-id="submit">
     <span>Submit</span>
   </button>
 </footer>
